force-app/main/default/objects/SOQL_Query_History__c/SOQL_Query_History__c.object-meta.xml
<CustomObject>
    <label>SOQL Query History</label>
    <pluralLabel>SOQL Query Histories</pluralLabel>
    <description
  >System-logged record of every SOQL Whisperer query run (success or failure). Stores query text and run metadata only — never result rows. One record per run, written by QueryHistoryService.logRun(). Purged manually only (Clear My History); no scheduled purge in this phase.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <displayFormat>QH-{00000000}</displayFormat>
        <label>Query History Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>