force-app/main/default/objects/SOQL_Query_History__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <type>Text</type>
    <length>255</length>
    <description
  >Exception message only, truncated to 255 chars. Never contains result data.</description>
</CustomField>