force-app/main/default/objects/SOQL_Query_History__c/fields/Natural_Language__c.field-meta.xml
<CustomField>
    <fullName>Natural_Language__c</fullName>
    <label>Natural Language</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description
  >Originating natural-language prompt, if any. Nullable — direct SOQL runs have no prompt.</description>
</CustomField>