force-app/main/default/objects/SOQL_Query_History__c/fields/Object_Scope__c.field-meta.xml
<CustomField>
    <fullName>Object_Scope__c</fullName>
    <label>Object Scope</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description
  >Comma-separated object API names the query was scoped to, restored when a history row is loaded back into the editor.</description>
</CustomField>