force-app/main/default/objects/SOQL_Query_History__c/fields/Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Row_Count__c</fullName>
    <label>Row Count</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <description>Number of rows returned by the run. 0 on error.</description>
</CustomField>