force-app/main/default/objects/SOQL_Query_History__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <label>SOQL</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <required>true</required>
    <description
  >The exact SOQL text that was executed. Query text/metadata only — never result rows.</description>
</CustomField>